--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="WebDev Portfolio created using create-react-app"/>
-
-    
+    <script src="https://kit.fontawesome.com/5c45cf9def.js" crossorigin="anonymous"></script>
     <title>Portfolio</title>
   </head>
   <body>
