--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="WebDev Portfolio created using create-react-app"/>
     <script src="https://kit.fontawesome.com/5c45cf9def.js" crossorigin="anonymous"></script>
-    <title>Portfolio</title>
+    <title>Portfolio Sophia</title>
   </head>
   <body>
     <div id="root"></div>
